still trying to fix spacing of navbar

--- a/edstruments/src/App.css
+++ b/edstruments/src/App.css
@@ -66,6 +66,7 @@
   border-bottom: 1px solid black;
   height: 4.188rem;
   font-family: Roboto;
+  width: 100vw;
 }
 
 .edstruments-logo {
@@ -76,26 +77,30 @@
 }
 
 .school-info {
+  width: 210px;
   text-align: right;
   padding-bottom: 0;
   padding-right: 5px;
   border-right: 1px solid rgb(192, 192, 192);
   height: 3.2rem;
   font-family: Roboto;
+  float: right;
 }
 
 .district {
-  font-size: 0.95rem;
+  font-size: 0.85rem;
   padding-bottom: 0;
   margin-bottom: 0;
   margin-top: 0.1rem;
+  /* width: 200px; */
 }
 
 .school {
   font-weight: bold;
-  font-size: 0.9rem;
+  font-size: 0.75rem;
   margin-bottom: 0;
   margin-top: 0.1rem;
+  /* max-width: 190px; */
 }
 
 .vertical-line {
@@ -103,6 +108,7 @@
 }
 
 .user-icon-circle {
+  float: right;
   width: 50px;
   min-width: 50px;
   height: 50px;
@@ -132,12 +138,15 @@
 a.nav-link:hover {
     color: #1787E0 !important;
     font-weight: 700;
-    text-decoration: underline;
 }
 
 .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .nav-link.active {
   color: #1787E0 !important;
   font-weight: 700;
-  text-decoration: underline;
+  text-decoration: underline; 
+}
 
+.navbar-expand .navbar-nav .nav-link {
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
